--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
